ghc-4335c07/testsuite/tests/typecheck/should_compile/tc030.hs
module ShouldSucceed where

type H = [Bool]

type G = (H,Char)
