ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail003.hs
module ShouldFail where

(d:e) = [1,'a']
